<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_multicopter</name>
  <version>0.0.0</version>
  <description>
    The choreonoid_ros_multicopter package
  </description>
  <maintainer email="eicha178@gmail.com">Eiichiro Kaneko</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>choreonoid_joy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
